@@ -20,7 +20,9 @@ interface Empty
 
 interface Thrower;
 
-exception A
+exception Base {};
+
+exception A extends Base
 {
     int aMem;
 };
