@@ -15,7 +15,9 @@ module Test
 
 interface Thrower;
 
-exception A
+exception Base {};
+
+exception A extends Base
 {
     int aMem;
 };
